change margin-top to padding-top to fix the spillover of margins to sibling elements

--- a/src/org/ramadda/repository/htdocs/fixedmapheader.css
+++ b/src/org/ramadda/repository/htdocs/fixedmapheader.css
@@ -65,11 +65,11 @@
 }
 /* the margin  should be a little more than the height of the logo image */
 .ramadda-outercontents {
-    margin-top:60px;
+    padding-top:60px;
 }
 
 .ramadda-system-message {
-    margin-top:60px;
+    padding-top:60px;
 }
 
 /* this is for the left side navigation */
